@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--1.0
 #
 
+2004-10-08 18:47:17 GMT	John Goerzen <jgoerzen@complete.org>	patch-56
+
+    Summary:
+      Checkpointing development
+    Revision:
+      missingh--head--1.0--patch-56
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/Logging/Logger.hs
+
+
 2004-10-08 17:38:01 GMT	John Goerzen <jgoerzen@complete.org>	patch-55
 
     Summary:
